--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "three": "^0.166.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
