--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "three": "^0.166.1",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.5",
     "ws": "^8.18.0"
   },
   "scripts": {
