implement yuka library for fine player control

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "three": "^0.166.1",
     "typescript": "^4.9.5",
     "uuid": "^11.0.5",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "yuka": "^0.7.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/yuka": "^0.7.4",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
